--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@ https://templatemo.com/tm-593-personal-shape
                     <div class="skills">
                         <span class="skill-tag">UI/UX Design</span>
                         <span class="skill-tag">Web Development</span>
-                        <span class="skill-tag">Brand Identity</span>
-                        <span class="skill-tag">Motion Graphics</span>
-                        <span class="skill-tag">Prototyping</span>
-                        <span class="skill-tag">Design Systems</span>
+                        <span class="skill-tag">Mobile development</span>
+                        <span class="skill-tag">Team-focused attitude</span>
+                
                     </div>
                     
                 </div>
@@ -132,4 +131,5 @@ https://templatemo.com/tm-593-personal-shape
 <script src="templatemo-personal-javascripts.js"></script>
 
 </body>
+
 </html>
